<resources>
    <string name="app_name">Recruitment Task</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="username">Enter Your Username</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign IN</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign Up</string>
    <string name="rv_benefits">RecyclerView is a flexible and efficient view for displaying large lists or grids in Android. It uses the ViewHolder pattern for improved performance and recycles views to reduce memory usage. It also supports built-in animations and custom item animations. It is commonly used instead of ListView or GridView to display large datasets.</string>
</resources>