<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupScreen">

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />





        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/usernameTextLayout"
            app:layout_constraintTop_toBottomOf="@id/txt_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            >
            <EditText
                android:id="@+id/edtxt_username"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:hint="@string/username"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/emailTextLayout"
        app:layout_constraintTop_toBottomOf="@id/usernameTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        android:layout_marginVertical="5dp"
        >
        <EditText
            android:id="@+id/edtxt_email"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/email"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/passwordTextLayout"
        app:layout_constraintTop_toBottomOf="@id/emailTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        android:layout_marginVertical="5dp"
        >
        <EditText
            android:id="@+id/edtxt_password"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordTextLayout"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:id="@+id/btn_signup"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_already_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/btn_signup"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"/>



</androidx.constraintlayout.widget.ConstraintLayout>